fixed CSS/contrast issues, updated project statuses

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@
 /* Making some variables because rewriting the same color 500 times gets old real fast... also this allows for easier and more consistent changes if I decide I don't like some color.*/
 :root {
     /* The basic colors */
-    --background_html: hsl(202, 60%, 95%);
+    --background_html: hsl(202, 60%, 92%);
     --offwhite: hsl(202, 60%, 97%);
     --offblack: hsl(244, 100%, 3%);
 
@@ -17,18 +17,16 @@
     --lighter:  hsl(202, 60%, 92%);
     --accentDark: hsl(244, 20%, 18%);
     --accentLight: hsl(207, 54%, 80%);
-    --accentStrong: hsl(214, 25%, 51%);
-    --accentMid:hsl(207, 40%, 40%);
-    --accentStrongLight: hsl(204, 55%, 74%);
+    --accentMid:hsl(207, 30%, 40%);
+    --accentMidLight: hsl(214, 30%, 60%);
 
     /* Element colors */
-    --pageHeaderBackground: hsl(244, 20%, 18%);
-    --headerColor: hsl(207, 40%, 40%);
-    --navBackgroundLight: hsl(202, 60%, 92%);
-    --navBackgroundHover: hsl(207, 54%, 80%);
+    --containerWhite: hsl(202, 100%, 99%);
+    --pageHeaderBackground: var(--accentDark);
+    --navBackgroundLight: var(--lighter);
+    --navBackgroundHover: var(--accentLight);
     --navBackgroundClick: hsl(214, 25%, 41%);
-    --navActivePageMobile: hsl(244, 20%, 18%);
-    --navActivePagePC: hsl(244, 20%, 18%);
+    --navActivePage: var(--accentDark);
 
     /* Other variables */
     --max_page_width: 1200px;
@@ -55,10 +53,10 @@ li {
     margin: 4px 0px;
 }
 a:link, a:visited {
-    color: var(--accentStrong)
+    color: var(--accentMid)
 }
 a:hover {
-    color: var(--accentStrongLight)
+    color: var(--accentMidLight)
 }
 a:active {
     color: var(--accentLight)
@@ -68,7 +66,7 @@ a:active {
     height: 100%;
     min-height: 100vh;
     margin: 0px auto;
-    background-color: var(--offwhite);
+    background-color: var(--containerWhite);
 }
 
 /* ============================= */
@@ -89,7 +87,7 @@ header h1 {
 }
 
 header a:link, header a:visited {
-    color: var(--lighter);
+    color: var(--offwhite);
     text-decoration: none;
 }
 
@@ -98,7 +96,7 @@ header a:hover {
     text-decoration: none;
 }
 header a:active {
-    color: var(--accentStrong);
+    color: var(--accentMidLight);
     text-decoration: none;
 }
 /* ============================= */
@@ -145,9 +143,9 @@ nav a:last-of-type div {
 #secondary_nav {
     display: none;
 }
-.active_nav {
-    background-color: var(--navActivePageMobile);
-    color: var(--lighter);
+#primary_nav a:link div.active_nav {
+    background-color: var(--navActivePage);
+    color: var(--offwhite);
     border-width: 0px;
 }
 
@@ -182,7 +180,6 @@ main h1, h2 {
     padding: 10px;
     min-height: 400px;
     overflow: hidden;
-    border: 0px solid var(--accentStrong);
     border-radius: 0.2rem;
     flex-grow: 1;
 }  
@@ -240,8 +237,6 @@ main h1, h2 {
         min-height: 100vh;
         max-width: var(--max_page_width);
         margin: 0px auto;
-        border: 0px solid var(--accentDark);
-        background-color: var(--offwhite);
     }
     /* All the fun nav stuff! */
     nav {
@@ -285,10 +280,6 @@ main h1, h2 {
         color: var(--offwhite);
         background-color: var(--navBackgroundClick);
     }
-    .active_nav {
-        background-color: var(--navActivePagePC);
-        color: var(--offwhite);
-    }
     /* Handling of cards on a page */
     .card_container {
         display: flex;
@@ -305,8 +296,8 @@ main h1, h2 {
         flex-basis: 300px;
         min-height: 400px;
         overflow: hidden;
-        border: 2px solid var(--accentStrong);
-        background-color: var(--background_html);
+        border: 2px solid var(--accentMid);
+        background-color: var(--offwhite);
         border-radius: 0.2rem;
         flex-grow: 1;
     }  
